# autopylot

./: CrashHandler.html  Engine.html  PTR.md  README.md  README.rst  converters39.html  datascience39.html  doc-search.html  pdoc_config.html  pyproject.toml  requirements.txt  screen_scraping39.html  string39.html  voice39.html
.github/workflows/: auto-pylot-pypi.yml
auto_pylot/: CheckSystem.py  CrashHandler.py  Engine.py  Toolkit.py  __init__.py
auto_pylot/Windows/functions/chrome/: __init__.py  chrome310.py  chrome39.py
auto_pylot/Windows/functions/excel/: __init__.py  excel37.py  excel39.py
auto_pylot/Windows/functions/extras/: __init__.py  extras39.py
auto_pylot/Windows/functions/folder/: __init__.py  folder310.py  folder37.py
auto_pylot/Windows/functions/keyboard/: __init__.py  keyboard310.py  keyboard37.py  keyboard38.py  keyboard39.py
auto_pylot/Windows/functions/mouse/: __init__.py  mouse310.py  mouse37.py  mouse38.py  mouse39.py
auto_pylot/Windows/functions/screen_scraping/: __init__.py  screen_scraping37.py
auto_pylot/Windows/functions/string/: __init__.py  string310.py
auto_pylot/Windows/functions/voice/: __init__.py  voice310.py  voice37.py  voice38.py  voice39.py
auto_pylot/Windows/functions/windows/: __init__.py  windows310.py
auto_pylot/cli/: ap_console.py  auto_pylot.py  speed_test.py
docs/: CNAME  CrashHandler.html  chrome39.html  citrix39.html  clipboard39.html  database39.html  datascience39.html  excel39.html  helpers.html  images39.html  index.html  index.js  keyboard39.html  mail39.html  mouse39.html  pdf39.html  scheduler39.html  string39.html  utility39.html  voice39.html
docs/my_autopylot/: Engine.html  citrix39.html  converters39.html  database39.html  folder39.html  helpers.html  images39.html  index.html  message39.html  mouse39.html  pdf39.html  pdoc_config.html  scheduler39.html  screen_scraping39.html  windows39.html
docs/resources/: index.html
docs/source/: conf.py  index.rst
my_autopylot/: CheckSystem.py  CrashHandler.py  Engine.py  Toolkit.py  __init__.py
my_autopylot/Windows/functions/BlackBox/: __init__.py
my_autopylot/Windows/functions/api/: __init__.py  api37.py
my_autopylot/Windows/functions/chrome/: __init__.py  chrome37.py  chrome38.py
my_autopylot/Windows/functions/excel/: __init__.py  excel310.py  excel37.py  excel39.py
my_autopylot/Windows/functions/extras/: __init__.py  extras310.py  extras37.py  extras38.py
my_autopylot/Windows/functions/folder/: __init__.py  folder37.py  folder39.py
my_autopylot/Windows/functions/keyboard/: __init__.py  keyboard310.py  keyboard37.py
my_autopylot/Windows/functions/mouse/: __init__.py  mouse310.py  mouse37.py  mouse38.py
my_autopylot/Windows/functions/screen_scraping/: __init__.py  screen_scraping310.py  screen_scraping39.py
my_autopylot/Windows/functions/string/: __init__.py  string38.py
my_autopylot/Windows/functions/voice/: __init__.py  voice310.py  voice38.py
my_autopylot/Windows/functions/windows/: __init__.py  windows310.py  windows39.py
my_autopylot/cli/: ap_console.py  my_autopylot.py  speed_test.py
resources/: index.html
support/whls/: Auto_Pylot-0.0.1-py3-none-any.whl
tests/: test_auto_pylot.py
