[tool.poetry]
name = "Auto-Pylot"
version = "0.1.0"
description = "Auto-Pylot is a Python based RPA platform for Software BOT development as an Open Source project. We strive to liberate humans from mundane, repetitive tasks, giving them more time to use their intellect and creativity to solve higher-order business challenges and perform knowledge work. We see a world where every employee will work side by side with Digital Workers, taking the robot out of the human, making them exponentially more productive and far more fulfilled."
authors = ["PyBots <support@pybots.ai>"]
license = "BSD"
readme = "README.md"
homepage = ""
repository = ""
documentation = "https://auto-pylot.readthedocs.io/"
keywords = ["PyBots","autopilot","auto pylot","RPA","Python","Automation","BOT","Software BOT","Auto Pilot","Dost"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',      
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: Windows',
    'Framework :: Robot Framework',
    'Programming Language :: Python',
]

[tool.poetry.urls]
'Date ❤️ with PyBots' = 'https://sites.google.com/view/clointfusion-hackathon/date-with-clointfusion'
'WhatsApp Community' = 'https://chat.whatsapp.com/JKr7m0avmkIFwYgMarShZG'
'Hackathon Website' = ''
'Documentation' = 'https://auto-pylot.readthedocs.io'
'Bug Reports' = ''
'Windows EXE' = ''
'Medium' = ''

[tool.poetry.dependencies]
python = ">=3.6.15,<=3.9.10"
pyfiglet = "^0.8.post1"
rich = "^11.2.0"
gTTS = "^2.2.3"
SpeechRecognition = "^3.8.1"
pywinauto = "^0.6.8"
speedtest-cli = "^2.1.3"
helium = "^3.0.8"
webdriver-manager = "^3.5.3"
PyGetWindow = "^0.0.9"
pyinspect = "^0.1.0"
emoji = "^1.7.0"
colored = "^1.4.3"

[tool.poetry.scripts]
ap = "auto_pylot.cli.auto_pylot:main"
ap_st = "auto_pylot.cli.speed_test:main"
ap_py = "auto_pylot.cli.ap_console:main"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
